--- a/vcweb/core/templates/includes/jquery.validate.html
+++ b/vcweb/core/templates/includes/jquery.validate.html
@@ -1,3 +1,3 @@
 {% with jquery_validate_version="1.11.1" %}
-<script type='text/javascript' src='//ajax.aspnetcdn.com/ajax/jquery.validate/{{jquery_validate_version}}/jquery.validate.min.js'></script>
+<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/jquery-validate/{{jquery_validate_version}}/jquery.validate.min.js'></script>
 {% endwith %}
