--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -33,8 +33,8 @@
             and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
         </p>
         <p>
-            Open source and education licenses have been generously provided for <a href='http://www.jetbrains.com'>JetBrains</a> 
-            <a href='http://www.jetbrains.com/pycharm'>PyCharm</a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            Open source and education licenses have been generously provided for 
+            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='http://www.jetbrains.com/img/logos/pycharm_logo.gif'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
             and <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>.
         </p>
     </div>
