--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -34,7 +34,7 @@
         </p>
         <p>
             Open source and education licenses have been generously provided for 
-            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='http://www.jetbrains.com/img/logos/pycharm_logo.gif'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='http://www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
             and <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>.
         </p>
     </div>
