--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class='navbar-brand {% active request home %}' href='{{ home }}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a>
+            <a class='navbar-brand {% active request home %}' href='{{ home }}'><img class='logo' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='vcweb logo'/>virtual commons</a>
         </div>
         <div class="collapse navbar-collapse" role='navigation'>
             <ul class='nav navbar-nav'>
@@ -123,7 +123,7 @@
             <li><a href='http://www.azregents.edu/'>&copy; 2011-{% now "Y" %} Arizona Board of Regents</a></li>
             <li>build: {% build_id %}</li>
         </ul>
-        <a style='margin-top: 15px;' class='visible-xs pull-right' href='{{home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/></a>
+        <a style='margin-top: 15px;' class='visible-xs pull-right' href='{{home}}'><img class='logo' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='vcweb logo'/></a>
         <ul style='margin-top: 5px;' class='list-unstyled visible-xs'>
             <li><a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
             <li><a href='http://shesc.asu.edu'>School of Human Evolution &amp; Social Change</a>
@@ -137,11 +137,11 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/js/bootstrap.min.js"></script>
-    <script src='{{STATIC_URL}}/js/bootbox.min.js'></script>
-    <script src='{{STATIC_URL}}js/jquery.cookie.js'></script>
+    <script src='{% static "js/bootbox.min.js" %}'></script>
+    <script src='{% static "js/jquery.cookie.js" %}'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js'></script>
-    <script src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
-    <script src='{{STATIC_URL}}js/common.js'></script>
+    <script src='{% static "js/ko/knockout.mapping.min.js" %}'></script>
+    <script src='{% static "js/common.js" %}'></script>
     <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
     <script>Raven.config('{% sentry_public_dsn %}').install();</script>
     {% block javascript %}
