--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -82,11 +82,13 @@
                     <li><a href='export/configuration.json'><i class='icon-pencil'></i> json</a></li>
                 </ul>
                 {% endcomment %}
-                <div style="padding-top: 5px;" data-bind='ifnot: isArchived'>
-                    <a class='btn btn-danger' data-bind='click: confirmExperimentControllerAction.bind($data, false)' data-action='complete' data-content='Mark this experiment as completed and archive it.'>
-                        <i class='fa fa-floppy-o'></i> archive
-                    </a>
-                </div>
+                {% if perms.core.change_experiment %}
+                    <div style="padding-top: 5px;" data-bind='ifnot: isArchived'>
+                        <a class='btn btn-danger' data-bind='click: confirmExperimentControllerAction.bind($data, false)' data-action='complete' data-content='Mark this experiment as completed and archive it.'>
+                            <i class='fa fa-floppy-o'></i> archive
+                        </a>
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div class='panel-group'>
