--- a/vcweb/core/templates/account/profile.html
+++ b/vcweb/core/templates/account/profile.html
@@ -11,10 +11,13 @@
 {% include "includes/bootstrap-form.html" %}
     <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
-      <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
+        {% if perms.auth.change_user %}
+            <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
+        {% else %}
+            <button type='submit' id='submitForm' class='btn btn-primary' disabled=disabled>Save</button>
+        {% endif %}
     </div>
   </div>
-
 {% endblock %}
 
 {% block javascript %}
