Adding option to not send email on experiment registration. Fixes Issue #235

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -33,7 +33,7 @@ label.error {
     padding: 0.4em;
 }
 
-.form-group.required label:after {
+.form-group.required > label:first-of-type:after {
     content: "*";
     color: rgb(194, 52, 52);
 }
