--- a/vcweb/core/templates/contact_form/contact_form.html
+++ b/vcweb/core/templates/contact_form/contact_form.html
@@ -26,9 +26,7 @@
             {% bootstrap_form form layout='horizontal'%}
             <div class='form-group'>
                 <div class='col-sm-offset-2 col-sm-10'>
-                    <button type="submit" class="btn btn-primary">
-                        <i class='fa fa-envelope-square'></i> Send
-                    </button>
+                    <button type="submit" class="btn btn-primary"><i class='fa fa-envelope-square'></i> Send </button>
                 </div>
             </div>
         </form>
