Renaming Honeypot field

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -38,6 +38,9 @@ label.error {
     color: rgb(194, 52, 52);
 }
 
+input#id_contact_number {
+    display: none;
+}
 .chat-sidebar {
     overflow: auto;
     height: 90%;
