making dev server warning message a little more clear
--HG--
extra : rebase_source : aaf9a5f873b98ba9d2836f05f56b124df5241f20

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -92,7 +92,8 @@
     {% if DEBUG %}
     <div class='alert alert-danger alert-block'>
         <h2>Development Server</h2>
-        <i class='fa fa-exclamation-triangle fa-2x'></i>You are accessing a <b>development version</b> of the vcweb software.  Any changes you make here are <b>NOT</b> persistent.
+        <i class='fa fa-exclamation-triangle fa-2x'></i>You are accessing a <b>development version</b> of vcweb. We
+        periodically cleanse the database so any data you generate on this site should be considered transient.
     </div>
     {% endif %}
     {% if messages %}
